# siren

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README.pt-BR.md
cmake/: gen_stub.py  options.cmake  version.cmake
cmake/modules/: DetectArch.cmake  HardenFlags.cmake
cmake/toolchains/: mingw-x86_64.cmake
doc/: TECHNIQUE.md  TECHNIQUE.pt-BR.md
include/siren/: siren.h  siren_status.h  siren_types.h
poc/: CMakeLists.txt
poc/injector/: main.c
poc/payload/: payload.c
src/: siren.c  siren.h  siren_injector.rc  siren_stub_x64.S
src/core/: siren_api.c  siren_status.c
src/handoff/: section_handoff.c  section_handoff.h
src/notify/: ldr_notify.c  ldr_notify.h
src/pe/: pe_parse.c  pe_parse.h
src/reflective/: refl_loader.c  refl_loader.h
src/runtime/: peb_walk.c  peb_walk.h
src/slack/: slack_finder.c  slack_finder.h
src/stub/: siren_stub.c  siren_stub.h  siren_stub_x64.S  siren_stub_x64_gas.S
tests/: CMakeLists.txt
tests/unit/: test_notify_list.c  test_section_handoff.c  test_slack_finder.c
